# gaussian-toolkit

./: .gitignore  BOUNDARIES.md  CLAUDE_CONTAINER.md  CMakeLists.txt  Dockerfile.consolidated  README.md  docker-compose.consolidated.yml
docker/: Dockerfile.milo  entrypoint.sh  install_milo.sh  supervisord.conf
docs/: architecture.md  capture-methodology.md  engineering-log.md
docs/architecture/: cluster-setup.md  overview.md  performance-stats.md
docs/integration/: docker.md
docs/plugins/: api-reference.md  getting-started.md
docs/workflows/: video-to-splat.md
eval/: benchmark_mipnerf360_lfs.sh  improvedGSplus_optimization_params.json  lfs_optimization_params.json  mcmc_indoor_reflective_params.json
obs-plugin/: CMakeLists.txt  plugin.cpp  shm_source.cpp  shm_source.hpp
report/: main.tex
report/chapters/: ch10_module_capture.tex  ch11_module_processing.tex  ch12_module_viewing.tex  ch13_module_advanced.tex  (+3 more)
research/: README.md  come-algorithm-analysis.md  come-integration-plan.md  milo-integration-plan.md  video-to-3d-methods-2025.md
scripts/: gsplat_depth_test.py  hardware_trace.py  render_tsdf_preview.py  run_gallery_pipeline.py  run_tsdf_mesh.py  test_gsplat_mesh.py  test_gsplat_mesh_integration.py  test_mesh_pipeline.py  test_orchestrator.py  test_person_removal.py  test_sam2_pipeline.py  test_sam3_pipeline.py  test_usd_pipeline.py
src/core/: scene.cpp  (+4 more)
tests/: CMakeLists.txt  test_input_controller_focus.cpp  test_lfs_strategy.cpp  test_mcp_protocol.cpp  test_rendering_refactor_services.cpp  test_undo_history.cpp  test_video_export_utils.cpp
(+278 files in other folders)
